src/objects/SBQQ__ProductFeature__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProductFeatureHelp</customHelpPage>
    <description>Feature of a configurable product that consists of one or more options. Features are configured by selecting one or more options.</description>
    <fields>
        <fullName>SBQQ__Category__c</fullName>
        <description>Category of options in this feature. Allows for another level of grouping.</description>
        <inlineHelpText>Assign this feature to a category such that multiple features with related options are grouped together.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFieldSet__c</fullName>
        <description>The API name of the field set that will be used for this feature during configuration.</description>
        <inlineHelpText>The API name of the field set that will be used for this feature during configuration.</inlineHelpText>
        <label>Configuration Field Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OptionConfiguration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product bundle that includes this feature. If you created the feature from the product detail page, this should already be populated.</description>
        <inlineHelpText>The product bundle that includes this feature. If you created the feature from the product detail page, this should already be populated.</inlineHelpText>
        <label>Configured SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule to be applied to the product selected by all options in this feature.</description>
        <inlineHelpText>Discount schedule to be applied to the product selected by all options in this feature. This overrides discount schedule selected on the product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Product Features</relationshipLabel>
        <relationshipName>ProductFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicProductFilterFieldSet__c</fullName>
        <description>The API name of the field set that will be used when filtering dynamic options for this feature during configuration.</description>
        <inlineHelpText>The API name of the field set that will be used when filtering dynamic options for this feature during configuration.</inlineHelpText>
        <label>Dynamic Option Filter Field Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ConfiguratorFilter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicProductLookupFieldSet__c</fullName>
        <description>The API name of the field set that will be used when viewing dynamic options for this feature during configuration.</description>
        <inlineHelpText>The API name of the field set that will be used when viewing dynamic options for this feature during configuration.</inlineHelpText>
        <label>Dynamic Option Lookup Field Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ConfiguratorLookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__MaxOptionCount__c</fullName>
        <description>Maximum number of options for this feature that can be selected as part of the product bundle.</description>
        <inlineHelpText>Maximum number of options for this feature that can be selected as part of the product bundle.</inlineHelpText>
        <label>Max Options</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__MinOptionCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Minimum number of options for this feature that must be part of the product bundle.</description>
        <inlineHelpText>Minimum number of options for this feature that must be part of the product bundle.</inlineHelpText>
        <label>Min Options</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>A sequential number that determines how the features are sorted in the related list on the product.</description>
        <inlineHelpText>A sequential number that determines how the features are sorted in the related list on the product.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionSelectionMethod__c</fullName>
        <description>Determines how user selects options attached to this product. &quot;Click&quot; method presents options with checkboxes next to them. &quot;Add&quot; renders a button which brings up predefined options. &quot;Dynamic&quot; renders a button which brings up all active products.</description>
        <inlineHelpText>Determines how user selects options attached to this product. &quot;Click&quot; method presents options with checkboxes next to them. &quot;Add&quot; renders a button which brings up predefined options. &quot;Dynamic&quot; renders a button which brings up all active products.</inlineHelpText>
        <label>Option Selection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Click</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__MinOptionValidation</fullName>
        <active>true</active>
        <description>Min Options cannot be negative.</description>
        <errorConditionFormula>AND(ISNEW(),SBQQ__MinOptionCount__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>SBQQ__MinOptionCount__c</errorDisplayField>
        <errorMessage>Min Options cannot be negative.</errorMessage>
    </validationRules>
</CustomObject>